# WayWidget

./: .gitignore  Containerfile  README.md  docker-build.sh  kickoffBuild.sh  package.sh  run.sh  run_config_example.sh  updateVersion.sh
.github/workflows/: build.yml
examples/: widget.d.ts
examples/calculator/: widget.js
examples/clock/: widget.js
examples/fox/: widget.js
examples/ip_visualizer/: widget.js
examples/keyboard/: widget.js
examples/lcars_clock/: widget.js
examples/sunrise/: widget.js
examples/tailscale/: widget.js
examples/warpcore/: widget.js
examples/weather/: widget.js
packaging/: org.example.WayWidget.yaml  waywidget.spec
waywidget/: Cargo.toml
waywidget/src/: cli.rs  keyboard.rs  main.rs  network.rs  svg.rs  tests.rs
